ArgumentFilter,userlang, guildlang half done

--- a/src/languages/en.ini
+++ b/src/languages/en.ini
@@ -1,4 +1,20 @@
+[generic]
+MissingArgument=This command requires at least 1 argument, you gave none.
+MissingArguments=This command requires at least {{requiredArgs}}, you gave {{argCount}} arguments.
+YouNeedThisPermission=You need this permission **{{permission}}** to execute this command.
+
 [ping]
 Ping=Ping...
 Pong=Pong {{ms}}ms
 Retry=Retry
+
+[userlang]
+UserOnCooldown=This command has a cooldown of 3 minutes, please wait before executing again.
+LanguageNotSupported=This language is not supported, here's a list of supported languages.
+# '
+LanguageAlreadyDefined=This language is already your user defined language.
+LanguageUpdated=:thumbsup: Updated! This command has a 3 minute cooldown if you wish to change again.
+
+[guildlang] # Will use strings from the above command
+LanguageAlreadyDefined=This language is already this guild defined language.
+UnableToVerifyMember=Unable to verify member permissions.
