--- a/src/languages/pt-br.ini
+++ b/src/languages/pt-br.ini
@@ -1,4 +1,20 @@
+[generic]
+MissingArgument=Esse comando precisa de pelo menos 1 argumento, você não ofereceu nenhum.
+MissingArguments=Esse comando precisa de pelo menos {{requiredArgs}} argumentos, você deu {{argCount}} argumentos.
+YouNeedThisPermission=Você precisa da seguinte permissão **{{permission}}** para executar esse comando.
+
 [ping]
 Ping=Ping...
-Pong=Pong {{ms}}ms
+Pong=Pong, latência {{ms}}
 Retry=Testar novamente
+
+[userlang]
+UserOnCooldown=Esse comando tem um tempo de espera de 3 minutos, por favor espere antes de executar novamente.
+LanguageNotSupported=Essa linguagem não é suportada, aqui está uma lista de linguagens que aceitamos.
+# '
+LanguageAlreadyDefined=Essa linguagem já está definida para sua conta.
+LanguageUpdated=:thumbsup: Atualizado! Esse comando tem um tempo de espera de 3 minutos caso queira usar novamente.
+
+[guildlang] # Will use strings from the above command
+LanguageAlreadyDefined=Essa linguagem já está definida como a linguagem definida do servidor.
+UnableToVerifyMember=Falha ao verificar suas permissões.
