userlang and guildlang fully implemented

--- a/src/languages/en.ini
+++ b/src/languages/en.ini
@@ -14,6 +14,7 @@ LanguageNotSupported=This language is not supported, here's a list of supported 
 # '
 LanguageAlreadyDefined=This language is already your user defined language.
 LanguageUpdated=:thumbsup: Updated! This command has a 3 minute cooldown if you wish to change again.
+LanguageImplemented=:thumbsup: Implemented! This command has a 3 minute cooldown if you wish to change again.
 
 [guildlang] # Will use strings from the above command
 LanguageAlreadyDefined=This language is already this guild defined language.
