Need to translate those later

--- a/src/languages/pt-br.ini
+++ b/src/languages/pt-br.ini
@@ -14,6 +14,8 @@ LanguageNotSupported=Essa linguagem não é suportada, aqui está uma lista de l
 # '
 LanguageAlreadyDefined=Essa linguagem já está definida para sua conta.
 LanguageUpdated=:thumbsup: Atualizado! Esse comando tem um tempo de espera de 3 minutos caso queira usar novamente.
+LanguageUpdated=:thumbsup: Updated! This command has a 3 minute cooldown if you wish to change again.
+LanguageImplemented=:thumbsup: Implemented! This command has a 3 minute cooldown if you wish to change again.
 
 [guildlang] # Will use strings from the above command
 LanguageAlreadyDefined=Essa linguagem já está definida como a linguagem definida do servidor.
