Advanced caching, better docs

--- a/src/languages/en.ini
+++ b/src/languages/en.ini
@@ -2,10 +2,13 @@
 MissingArgument=This command requires at least 1 argument, you gave none.
 MissingArguments=This command requires at least {{requiredArgs}}, you gave {{argCount}} arguments.
 YouNeedThisPermission=You need this permission **{{permission}}** to execute this command.
+UsingCommandsTooFast=You're using commands way too fast! Wait just a bit.
+# '
+AnotherCommandStillProcessing=Another command is still processing for you, check if its not waiting your interaction.
 
 [ping]
 Ping=Ping...
-Pong=Pong {{ms}}ms
+Pong=Pong, latency {{ms}}ms
 Retry=Retry
 
 [userlang]
