--- a/src/languages/pt-br.ini
+++ b/src/languages/pt-br.ini
@@ -2,10 +2,12 @@
 MissingArgument=Esse comando precisa de pelo menos 1 argumento, você não ofereceu nenhum.
 MissingArguments=Esse comando precisa de pelo menos {{requiredArgs}} argumentos, você deu {{argCount}} argumentos.
 YouNeedThisPermission=Você precisa da seguinte permissão **{{permission}}** para executar esse comando.
+UsingCommandsTooFast=Espere um pouco antes de usar outro comando.
+AnotherCommandStillProcessing=Outro comando ainda está processando, verifique se o comando não está esperando sua interação.
 
 [ping]
 Ping=Ping...
-Pong=Pong, latência {{ms}}
+Pong=Pong, latência {{ms}}ms
 Retry=Testar novamente
 
 [userlang]
@@ -14,8 +16,7 @@ LanguageNotSupported=Essa linguagem não é suportada, aqui está uma lista de l
 # '
 LanguageAlreadyDefined=Essa linguagem já está definida para sua conta.
 LanguageUpdated=:thumbsup: Atualizado! Esse comando tem um tempo de espera de 3 minutos caso queira usar novamente.
-LanguageUpdated=:thumbsup: Updated! This command has a 3 minute cooldown if you wish to change again.
-LanguageImplemented=:thumbsup: Implemented! This command has a 3 minute cooldown if you wish to change again.
+LanguageImplemented=:thumbsup: Pronto! Esse comando tem um tempo de espera de 3 minutos caso queira usar novamente.
 
 [guildlang] # Will use strings from the above command
 LanguageAlreadyDefined=Essa linguagem já está definida como a linguagem definida do servidor.
