Leaderboard command, this is scary code

--- a/src/languages/en.ini
+++ b/src/languages/en.ini
@@ -22,3 +22,6 @@ LanguageImplemented=:thumbsup: Implemented! This command has a 3 minute cooldown
 [guildlang] # Will use strings from the above command
 LanguageAlreadyDefined=This language is already this guild defined language.
 UnableToVerifyMember=Unable to verify member permissions.
+
+[leaderboard]
+Points=Points
