--- a/src/languages/pt-br.ini
+++ b/src/languages/pt-br.ini
@@ -21,3 +21,6 @@ LanguageImplemented=:thumbsup: Pronto! Esse comando tem um tempo de espera de 3 
 [guildlang] # Will use strings from the above command
 LanguageAlreadyDefined=Essa linguagem já está definida como a linguagem definida do servidor.
 UnableToVerifyMember=Falha ao verificar suas permissões.
+
+[leaderboard]
+Points=Pontos
