Fully functional leaderboard command

--- a/src/languages/en.ini
+++ b/src/languages/en.ini
@@ -5,6 +5,7 @@ YouNeedThisPermission=You need this permission **{{permission}}** to execute thi
 UsingCommandsTooFast=You're using commands way too fast! Wait just a bit.
 # '
 AnotherCommandStillProcessing=Another command is still processing for you, check if its not waiting your interaction.
+emoji=🇺🇸
 
 [ping]
 Ping=Ping...
@@ -25,3 +26,8 @@ UnableToVerifyMember=Unable to verify member permissions.
 
 [leaderboard]
 Points=Points
+BugHunterLeaderboard=OutFox Bug Hunter Leaderboard
+UserPointsField={{points}} Points - {{user}} ({{role}})
+GoBack=Go back
+NextPage=Next page
+Page=Page
