--- a/src/languages/pt-br.ini
+++ b/src/languages/pt-br.ini
@@ -4,6 +4,7 @@ MissingArguments=Esse comando precisa de pelo menos {{requiredArgs}} argumentos,
 YouNeedThisPermission=Você precisa da seguinte permissão **{{permission}}** para executar esse comando.
 UsingCommandsTooFast=Espere um pouco antes de usar outro comando.
 AnotherCommandStillProcessing=Outro comando ainda está processando, verifique se o comando não está esperando sua interação.
+emoji=🇧🇷
 
 [ping]
 Ping=Ping...
@@ -24,3 +25,8 @@ UnableToVerifyMember=Falha ao verificar suas permissões.
 
 [leaderboard]
 Points=Pontos
+BugHunterLeaderboard=Placar de Pontos de Bug OutFox
+UserPointsField={{points}} Pontos - {{user}} ({{role}})
+GoBack=Voltar
+NextPage=Proxima página
+Page=Página
