translatable lang commands, "start" reload command

--- a/src/languages/en.ini
+++ b/src/languages/en.ini
@@ -18,10 +18,27 @@ LanguageNotSupported=This language is not supported, here's a list of supported 
 LanguageAlreadyDefined=This language is already your user defined language.
 LanguageUpdated=:thumbsup: Updated! This command has a 3 minute cooldown if you wish to change again.
 LanguageImplemented=:thumbsup: Implemented! This command has a 3 minute cooldown if you wish to change again.
+SetMyLanguage=Set my language
+DeleteMyLanguage=Delete my language
+Nevermind=Nevermind
+ChangeMyLanguage=Change my language
+SelectYourLanguage=Select your Language
+WhatYouWantToDo=What you want to do?
+SetLanguageFromList=Select language from list
+Done=Done!
+DeleteDefinedLanguage=Delete defined language
+AreYouSure=Are you sure?
+Deleted=Deleted!
+Ok=Ok
 
 [guildlang] # Will use strings from the above command
 LanguageAlreadyDefined=This language is already this guild defined language.
 UnableToVerifyMember=Unable to verify member permissions.
+SetGuildLanguage=Set guild language
+DeleteGuildLanguage=Delete guild language
+ChangeGuildLanguage=Change guild language
+SelectGuildLanguage=Select guild language
+MembersWithDefinedLanguage=Members who define their own language will ignore the guild language!
 
 [leaderboard]
 Points=Points
