--- a/src/languages/pt-br.ini
+++ b/src/languages/pt-br.ini
@@ -4,6 +4,8 @@ MissingArguments=Esse comando precisa de pelo menos {{requiredArgs}} argumentos,
 YouNeedThisPermission=Você precisa da seguinte permissão **{{permission}}** para executar esse comando.
 UsingCommandsTooFast=Espere um pouco antes de usar outro comando.
 AnotherCommandStillProcessing=Outro comando ainda está processando, verifique se o comando não está esperando sua interação.
+Yes=Yes
+No=No
 
 [ping]
 Ping=Ping...
@@ -17,10 +19,27 @@ LanguageNotSupported=Essa linguagem não é suportada, aqui está uma lista de l
 LanguageAlreadyDefined=Essa linguagem já está definida para sua conta.
 LanguageUpdated=:thumbsup: Atualizado! Esse comando tem um tempo de espera de 3 minutos caso queira usar novamente.
 LanguageImplemented=:thumbsup: Pronto! Esse comando tem um tempo de espera de 3 minutos caso queira usar novamente.
+SetMyLanguage=Definir minha linguagem
+DeleteMyLanguage=Remover minha linguagem
+Nevermind=Esquece
+ChangeMyLanguage=Mudar minha linguagem
+SelectYourLanguage=Selecione a linguagem
+WhatYouWantToDo=O que você quer fazer?
+SetLanguageFromList=Selecione a linguagem pela lista
+Done=Feito!
+DeleteDefinedLanguage=Deletar linguagem definidaDelete defined language
+AreYouSure=Tem certeza?
+Deleted=Deletado!
+Ok=Ok
 
 [guildlang] # Will use strings from the above command
 LanguageAlreadyDefined=Essa linguagem já está definida como a linguagem definida do servidor.
 UnableToVerifyMember=Falha ao verificar suas permissões.
+SetGuildLanguage=Definir linguagem do servidor
+DeleteGuildLanguage=Deletar linguagem do servidor
+ChangeGuildLanguage=Mudar linguagem do servidor
+SelectGuildLanguage=Selecionar linguagem do servidor
+MembersWithDefinedLanguage=Membros que definirem sua própria linguagem vão ignorar a linguagem do servidor!
 
 [leaderboard]
 Points=Pontos
