--- a/src/languages/en.ini
+++ b/src/languages/en.ini
@@ -5,6 +5,7 @@ YouNeedThisPermission=You need this permission **{{permission}}** to execute thi
 UsingCommandsTooFast=You're using commands way too fast! Wait just a bit.
 # '
 AnotherCommandStillProcessing=Another command is still processing for you, check if its not waiting your interaction.
+lookUpBack=Go Back
 
 [ping]
 Ping=Ping...
