stupid discordAPI unknown webhook error

--- a/src/languages/en.ini
+++ b/src/languages/en.ini
@@ -44,7 +44,7 @@ MembersWithDefinedLanguage=Members who define their own language will ignore the
 [leaderboard]
 Points=Points
 BugHunterLeaderboard=OutFox Bug Hunter Leaderboard
-UserPointsField={{points}} Points - {{user}} ({{role}})
+UserPointsField={{user}} - {{points}} Points ({{role}})
 GoBack=Go back
 NextPage=Next page
 Page=Page
