--- a/src/languages/pt-br.ini
+++ b/src/languages/pt-br.ini
@@ -44,7 +44,7 @@ MembersWithDefinedLanguage=Membros que definirem sua própria linguagem vão ign
 [leaderboard]
 Points=Pontos
 BugHunterLeaderboard=Placar de Pontos de Bug OutFox
-UserPointsField={{points}} Pontos - {{user}} ({{role}})
+UserPointsField={{user}} - {{points}} Pontos ({{role}})
 GoBack=Voltar
 NextPage=Proxima página
 Page=Página
